# mksv-renderer

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  analyzer.ruleset
cmake/: ClangFormat.cmake  Print.cmake
mksv_engine/: CMakeLists.txt
mksv_engine/inc/mksv/: engine.hpp  keyboard.hpp  log.hpp  window.hpp  windows_helpers.hpp
mksv_engine/inc/mksv/common/: types.hpp
mksv_engine/inc/mksv/math/: consts.hpp
mksv_engine/inc/mksv/string/: utils.hpp
mksv_engine/inc/mksv/utils/: helpers.hpp
mksv_engine/inc/mksv/win/: window.hpp  window_class.hpp
mksv_engine/src/: engine.cpp  keyboard.cpp  log.cpp  window.cpp  windows_helpers.cpp
mksv_engine/src/string/: utils.cpp
mksv_engine/src/utils/: helpers.cpp  string.cpp
mksv_engine/src/win/: window.cpp  window_class.cpp  window_proc.cpp
mksv_renderer/: CMakeLists.txt
mksv_renderer/inc/mksv/: engine.hpp  keyboard.hpp  keycodes.hpp  log.hpp  mksv_d3d12.hpp  mksv_wrl.hpp
mksv_renderer/inc/mksv/graphics/: command_queue.hpp
mksv_renderer/inc/mksv/math/: consts.hpp  types.hpp
mksv_renderer/inc/mksv/utils/: d3d12_helpers.hpp  helpers.hpp
mksv_renderer/inc/mksv/win/: window.hpp  window_class.hpp
mksv_renderer/src/: engine.cpp  keyboard.cpp  log.cpp
mksv_renderer/src/graphics/: command_queue.cpp
mksv_renderer/src/utils/: d3d12_helpers.cpp  helpers.cpp
mksv_renderer/src/win/: window.cpp  window_class.cpp  window_proc.cpp
sandbox/: CMakeLists.txt
sandbox/shaders/: CMakeLists.txt  pixel_shader.hlsl  vertex_shader.hlsl
sandbox/src/: main.cpp
